# fast-api-practice

./: README.md  database.py  main.py  models.py  pyproject.toml  secrets.json  test.py
