[tool.poetry]
name = "dd"
version = "0.1.0"
description = ""
authors = ["izunaaaaa <art970@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymysql = "^1.0.2"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.46"
mysql = "^0.0.3"
databases = "^0.7.0"
aiomysql = "^0.1.1"
union = "^0.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
